module-1/apps/whoami/ingress/whoami-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.traefik.${EXTERNAL_IP}.sslip.io`)
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: le
